src/QPointF.h


// 
// This file has been automatically generated by RaQt_maker V0.0.4.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQPointFCtor_1();
EXTERNC void * QWQPointFCtor_2(void * p);
EXTERNC void * QWQPointFCtor_3(double  xpos, double  ypos);
EXTERNC double QWQPointFmanhattanLength(void * obj);
EXTERNC int8_t QWQPointFisNull(void * obj);
EXTERNC double QWQPointFx(void * obj);
EXTERNC double QWQPointFy(void * obj);
EXTERNC void QWQPointFsetX(void * obj, double  x);
EXTERNC void QWQPointFsetY(void * obj, double  y);
EXTERNC void QWQPointFDtor(void *);